# ruin

./: .travis.yml  Cargo.toml  LICENSE.txt  README.md  build.rs
examples/: messagebox.rs
src/: lib.rs  unit_tests.rs
src/gui/: dialog.rs  mod.rs
src/native/: cocoa.rs  gtk.rs  mod.rs  winapi.rs  x11.rs
src/utils/: i18n.rs  mod.rs  string.rs
tests/: check_sanity.rs  i18n.rs
tests/i18n/: en-us
